ingress/coroot-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coroot
  namespace: coroot
  annotations:
    gethomepage.dev/href: "https://coroot.mizar.scalar.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/description: Metrics
    gethomepage.dev/group: Services
    gethomepage.dev/app: coroot-coroot # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Coroot
    gethomepage.dev/pod-selector: "app.kubernetes.io/part-of=coroot"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`coroot.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: coroot-coroot
          kind: Service
          namespace: coroot
          port: http
  tls:
    secretName: coroot-tls
