ingress/coroot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coroot
  namespace: coroot
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    gethomepage.dev/description: Metrics
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: coroot.png
    gethomepage.dev/name: Coroot
    gethomepage.dev/href: https://coroot.tahr-toad.ts.net
spec:
  defaultBackend:
    service:
      name: coroot-coroot
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - coroot
