ingress/epic-free-games-ronin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epic-free-games
  namespace: epic-games-node-ronin
spec:
  defaultBackend:
    service:
      name: epic-free-games
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - epic-r
