ingress/homepage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    gethomepage.dev/href: https://home.tahr-toad.ts.net
spec:
  defaultBackend:
    service:
      name: homepage
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - home
