ingress/matrix-web-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-web
  namespace: matrix
  annotations:
    gethomepage.dev/href: "https://web.matrix.scalar.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: synapse.png
    gethomepage.dev/description: Chat Web Interface
    gethomepage.dev/group: Services
    #gethomepage.dev/app: coroot-coroot # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Matrix Web
    #gethomepage.dev/pod-selector: "app.kubernetes.io/part-of=coroot"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`web.matrix.scalar.cloud`)
      priority: 10
      services:
        - name: prod-element
          kind: Service
          namespace: matrix
          port: http
  tls:
    secretName: matrix-web-tls
