ingress/n8n-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    gethomepage.dev/description: Workflow Automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: sh-n8n.png
    gethomepage.dev/name: N8N
    gethomepage.dev/href: https://n8n.mizar.scalar.cloud
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: n8n
          kind: Service
          namespace: n8n
          port: http
  tls:
    secretName: n8n-tls
