ingress/n8n.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    gethomepage.dev/description: Workflow Automation
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: sh-n8n.png
    gethomepage.dev/name: N8N
    gethomepage.dev/href: https://n8n.tahr-toad.ts.net
spec:
  defaultBackend:
    service:
      name: n8n
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - n8n
