ingress/octobot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octobot
  namespace: crypto
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  defaultBackend:
    service:
      name: octobot
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - crypto
