ingress/open-webui-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ai.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: open-webui
          kind: Service
          namespace: ai
          port: http
  tls:
    secretName: open-webui-tls
