ingress/paperless.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless
  annotations:
    gethomepage.dev/href: "https://docs.mizar.scalar.cloud"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: paperless.png
    gethomepage.dev/description: Document Management System
    gethomepage.dev/group: Services
    gethomepage.dev/name: Paperless
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`docs.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: prod-paperless-ngx
          kind: Service
          namespace: paperless
          port: http
  tls:
    secretName: paperless-tls
