ingress/tandoor-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tandoor
  namespace: tandoor
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`meals.mizar.scalar.cloud`)
      priority: 10
      services:
        - name: recipes
          kind: Service
          namespace: tandoor
          port: gunicorn
  tls:
    secretName: tandoor-tls
