ingress/wazuh-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh
  namespace: wazuh
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    gethomepage.dev/description: Security Monitoring
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/icon: wazuh.png
    gethomepage.dev/name: Wazuh
    gethomepage.dev/href: https://wazuh.tahr-toad.ts.net
spec:
  defaultBackend:
    service:
      name: dashboard
      port:
        name: dashboard
  ingressClassName: tailscale
  tls:
    - hosts:
        - wazuh
